# pulse

./: 1  Cargo.toml  README.md  install.sh
src/: main.rs
src/lib/: mod.rs
src/modules/: cpu.rs  disk.rs  gpus.rs  load.rs  mem.rs  mod.rs  network.rs
